Bug 108257 - ASSERTION FAILED: m_clipRectsCache->m_respectingOverflowClip[clipRectsType] == (clipRectsContext.respectOverflowClip == RespectOverflowClip) in RenderLayer.
Summary: ASSERTION FAILED: m_clipRectsCache->m_respectingOverflowClip[clipRectsType] =...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: vollick
URL:
Keywords: InRadar
: 108452 (view as bug list)
Depends on:
Blocks: 79668 108254
  Show dependency treegraph
 
Reported: 2013-01-29 16:53 PST by Dongseong Hwang
Modified: 2013-03-04 09:31 PST (History)
14 users (show)

See Also:


Attachments
Patch (11.05 KB, patch)
2013-03-01 12:33 PST, vollick
no flags Details | Formatted Diff | Diff
Updated test expectations (15.46 KB, patch)
2013-03-01 13:57 PST, vollick
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dongseong Hwang 2013-01-29 16:53:31 PST
Two tests hit assertion fail.
compositing/overflow/automatically-opt-into-composited-scrolling.html
compositing/overflow/composited-scrolling-creates-a-stacking-container.html

crash log for WebProcess (pid <unknown>):
STDOUT: <empty>
STDERR: ASSERTION FAILED: m_clipRectsCache->m_respectingOverflowClip[clipRectsType] == (clipRectsContext.respectOverflowClip == RespectOverflowClip)
STDERR: /media/WDDisk/workspace/WebKit/WebKit/Source/WebCore/rendering/RenderLayer.cpp(4521) : void WebCore::RenderLayer::updateClipRects(const WebCore::RenderLayer::ClipRectsContext&)
STDERR: 1   0x7fa38ba41ee7 WebCore::RenderLayer::updateClipRects(WebCore::RenderLayer::ClipRectsContext const&)
STDERR: 2   0x7fa38ba42a53 WebCore::RenderLayer::parentClipRects(WebCore::RenderLayer::ClipRectsContext const&, WebCore::ClipRects&) const
STDERR: 3   0x7fa38ba42ba4 WebCore::RenderLayer::backgroundClipRect(WebCore::RenderLayer::ClipRectsContext const&) const
STDERR: 4   0x7fa38ba42da7 WebCore::RenderLayer::calculateRects(WebCore::RenderLayer::ClipRectsContext const&, WebCore::LayoutRect const&, WebCore::LayoutRect&, WebCore::ClipRect&, WebCore::ClipRect&, WebCore::ClipRect&, WebCore::LayoutPoint const*) const
STDERR: 5   0x7fa38ba3db18 WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext*, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int)
STDERR: 6   0x7fa38ba3d3af WebCore::RenderLayer::paintLayerContentsAndReflection(WebCore::GraphicsContext*, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int)
STDERR: 7   0x7fa38ba3d284 WebCore::RenderLayer::paintLayer(WebCore::GraphicsContext*, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int)
STDERR: 8   0x7fa38ba3e71f WebCore::RenderLayer::paintList(WTF::Vector<WebCore::RenderLayer*, 0ul>*, WebCore::GraphicsContext*, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int)
STDERR: 9   0x7fa38ba3e31f WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext*, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int)
STDERR: 10  0x7fa38ba5b89c WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext*, WebCore::IntRect const&, unsigned int, unsigned int)
STDERR: 11  0x7fa38ba5bc15 WebCore::RenderLayerBacking::paintContents(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, unsigned int, WebCore::IntRect const&)
STDERR: 12  0x7fa38b835405 WebCore::GraphicsLayer::paintGraphicsLayerContents(WebCore::GraphicsContext&, WebCore::IntRect const&)
STDERR: 13  0x7fa38fcaa12f WebCore::CoordinatedGraphicsLayer::tiledBackingStorePaint(WebCore::GraphicsContext*, WebCore::IntRect const&)
STDERR: 14  0x7fa38fcad97a WebKit::CoordinatedTile::updateBackBuffer()
STDERR: 15  0x7fa38b857d97 WebCore::TiledBackingStore::updateTileBuffers()
STDERR: 16  0x7fa38b858cf9 WebCore::TiledBackingStore::createTiles()
STDERR: 17  0x7fa38b8579e6 WebCore::TiledBackingStore::coverWithTilesIfNeeded()
STDERR: 18  0x7fa38b858321 WebCore::TiledBackingStore::commitScaleChange()
STDERR: 19  0x7fa38b8582d0 WebCore::TiledBackingStore::setContentsScale(float)
STDERR: 20  0x7fa38fcaa0e1 WebCore::CoordinatedGraphicsLayer::createBackingStore()
STDERR: 21  0x7fa38fcaacad WebCore::CoordinatedGraphicsLayer::updateContentBuffers()
STDERR: 22  0x7fa38fca9bf8 WebCore::CoordinatedGraphicsLayer::flushCompositingStateForThisLayerOnly()
STDERR: 23  0x7fa38fca8ed3 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 24  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 25  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 26  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 27  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 28  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 29  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 30  0x7fa38fca8f14 WebCore::CoordinatedGraphicsLayer::flushCompositingState(WebCore::FloatRect const&)
STDERR: 31  0x7fa38ba5ee4c WebCore::RenderLayerCompositor::flushPendingLayerChanges(bool)
Comment 1 Dominik Röttsches (drott) 2013-01-30 02:06:51 PST
My assumption is, this happened after bug 106142, r140999.
Comment 2 Jussi Kukkonen (jku) 2013-01-30 10:14:41 PST
This is asserting as well:
compositing/overflow/clip-content-under-overflow-controls.html
Comment 3 Simon Fraser (smfr) 2013-01-30 14:44:02 PST
This is related to compositing scrolling. Mac shows it also.
Comment 4 Ádám Kallai 2013-01-31 06:04:16 PST
These tests assertion fail on Qt debug too.

 * compositing/overflow/composited-scrolling-creates-a-stacking-container.html
diff:
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r141400%20(27435)/compositing/overflow/composited-scrolling-creates-a-stacking-container-crash-log.txt
 * compositing/overflow/automatically-opt-into-composited-scrolling.html
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Debug/r141400%20(27435)/compositing/overflow/automatically-opt-into-composited-scrolling-crash-log.txt
Comment 5 Simon Fraser (smfr) 2013-01-31 09:09:48 PST
*** Bug 108452 has been marked as a duplicate of this bug. ***
Comment 6 Jessie Berlin 2013-01-31 11:31:27 PST
I am going to mark these as Crashing in Debug in platform/mac’s TestExpectations, since nobody appears to be actively working on this.
Comment 7 Jessie Berlin 2013-01-31 12:02:28 PST
Marked the tests as crashing in debug for mac in http://trac.webkit.org/changeset/141457
Comment 8 Jessie Berlin 2013-02-01 08:41:45 PST
<rdar://problem/13133130>
Comment 9 vollick 2013-03-01 12:33:02 PST
Created attachment 191012 [details]
Patch
Comment 10 vollick 2013-03-01 13:57:31 PST
Created attachment 191031 [details]
Updated test expectations
Comment 11 Dave Hyatt 2013-03-04 09:06:24 PST
Comment on attachment 191031 [details]
Updated test expectations

r=me
Comment 12 WebKit Review Bot 2013-03-04 09:31:21 PST
Comment on attachment 191031 [details]
Updated test expectations

Clearing flags on attachment: 191031

Committed r144639: <http://trac.webkit.org/changeset/144639>
Comment 13 WebKit Review Bot 2013-03-04 09:31:27 PST
All reviewed patches have been landed.  Closing bug.